--- a/edviron_frontend/.env
+++ b/edviron_frontend/.env
@@ -1,3 +1,3 @@
 
 REACT_BASE_URL=http://localhost:8000
-GLOBAL_BASE_URL=https://edviron-school-payment-and-dashboar-sepia.vercel.app
+REACT_APP_API_URL=https://edviron-school-payment-and-dashboar-sepia.vercel.app
